--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "asyncpg>=0.31.0",
     "dotenv>=0.9.9",
     "fastapi>=0.124.0",
     "fastmcp>=2.13.3",
     "openai>=2.9.0",
+    "psycopg[binary,pool]>=3.3.2",
     "pydantic>=2.12.5",
     "requests>=2.32.5",
     "sqlalchemy>=2.0.44",
