добавил реакт агента, пока работает из консоли локально

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 # адрес cal.com
 CALCOM_HOST = "https://api.cal.com"
+AI_API_KEY = "ZTI2NDc2NjAtNjc2ZC00MzQwLTlkY2YtMTYxYzc4ZmQ1ODgx.8493e437c0e787e6cff9e12002db0a74"
+TG_TOKEN = "8473099880:AAG_asVawlMoiGEt_hukPj3L2S-dAOtix7M"
